# Aoc2024

./: LICENSE
aoc_1_2/src/: main.rs
dag_1/aoc_1/src/: main.rs
dag_2/aoc_2_1&2/src/: main.rs
dag_3/aoc_dag3_part1/: Cargo.toml
dag_3/aoc_dag3_part1/src/: main.rs
dag_3/aoc_dag3_part2/: Cargo.toml
dag_3/aoc_dag3_part2/src/: main.rs
dag_4/aoc_4_1/: Cargo.toml
dag_4/aoc_4_1/src/: main.rs
dag_4/aoc_4_2/: Cargo.toml
dag_4/aoc_4_2/src/: main.rs
dag_5/aoc_5_1/: Cargo.toml
dag_5/aoc_5_1/src/: main.rs
dag_5/aoc_5_2/: Cargo.toml
dag_5/aoc_5_2/src/: main.rs
dag_6/aoc_6_1/: Cargo.toml  output.txt
dag_6/aoc_6_1/src/: main.rs
